package com.google.search.app;

message VoiceSearchRequest {
    optional UserInfo user_info = 293000;
    optional VoiceInfo voice_info = 293100;
    optional SoundData sound_data = 293101;
    optional PhoneInfo phone_info = 294000;
    optional UserPreference user_preference = 294500;
    optional Empty U27301014 = 27301014;
    optional Empty U27423252 = 27423252;
    optional Empty U27801516 = 27801516;
    optional GetMethod get_method = 34352150;
    optional Empty U61914024 = 61914024;
    optional Empty U77499489 = 77499489;
    optional Empty U82185720 = 82185720;
}

message VoiceSearchResponse {    
    optional RecogBlock recog_block = 1253625;
    optional SearchResult search_result = 39442181;
    optional SearchResource G28599812 = 28599812;
}

message UserInfo {
    optional Empty lang = 2;
    optional Empty locale = 3;
    optional string uid = 5;
    optional GoogleNow google_now = 9;
}

message GoogleNow {
	optional string auth_url = 1;
	optional string auth_key = 2;
}

message VoiceInfo {
    optional float sample_rate = 2;
}

message SoundData {
    optional bytes amr_stream = 1;
}

message PhoneInfo {
	optional string type = 2;
	optional string user_agent = 4;
	repeated string support_lang = 5;
	optional string os = 8;
	optional string model = 9;
	optional string brand = 11;
}

message UserPreference {
    optional Favorites favorites = 1;
    optional Empty UP4 = 4;
    optional Empty UP25 = 25;
}

message Favorites {
	optional string lang = 9;
	repeated Empty favorites_data = 22;
}

message GetMethod {
	optional Empty params = 1;
	optional HttpHeader headers = 2;
	optional string path = 3;
}

message HttpHeader {
    repeated string name = 1;
    repeated string text_value = 2;
    repeated bytes binary_value = 4;
}

message RecogBlock {
    optional RecogResult recog_result = 1;
    optional SoundInfo sound_info = 2;
    optional string inputLang = 3;
    optional string searchLang = 4;
}

message RecogResult {
    optional CandidateResults can = 3;
    repeated RecogSegment recog_segment = 4;
    optional CandidateResults embededi15 = 5;
}

message SoundInfo {
    optional int32 record_interval = 3;
}

message RecogSegment {
    optional DisplayResult display = 1;
    optional int32 seg_time = 3;
}

message DisplayResult {
    optional string query = 1;
    optional double prob = 2;
}

message CandidateResults {
    optional CandidateResult can3 = 3;
    optional Empty can4 = 4;
}

message CandidateResult {
    repeated string query = 1; 
    repeated string queryWords = 12; 
    optional float res2 = 2;
    repeated CandidateInfo res7 = 7;
}

message CandidateInfo {
    optional CandidateInfoMore inf1 = 1;
}

message CandidateInfoMore {
    optional CandidateInfoMoreDetial more1 = 1;
    optional string more3 = 3;
}

message CandidateInfoMoreDetial {
    optional string type = 1;
    optional string detial2 = 2;
    optional float detial3 = 3;
    optional CandidateInfoMoreDetialSnip detial7 = 7;
    optional string detial8 = 8;
}

message CandidateInfoMoreDetialSnip {
    optional string query = 1;
}

message SearchResult {
    optional string header = 1;
    optional bytes bodyBytes = 3;
}

message SearchResource {
    optional bytes SR1 = 1;
    optional Empty SR3 = 3;
}

message VSExInfo {
    optional bytes info1 = 1;
    optional Empty info3 = 3;
}

message Empty {
}
